Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
Cheshire-Cat
-
7.0.0-4565
-
Untriaged
-
1
-
Unknown
Description
Attachments
Issue Links
- depends on
-
MB-45132 Collections: tombstone purging doesn't adjust collection disk size
-
- Closed
-
-
MB-45144 Collections: key & fixed metadata overhead not included in collection disk size
-
- Closed
-
-
MB-45221 Collections: disk/data size delete->delete is increasing the counter
-
- Closed
-
- relates to
-
DOC-8408 Update scope and collection metric examples
-
- Closed
-
Dave Rigby: Is it the same we show in UI after aggregating it from all nodes?