MB-44826: Rename kv_collection_disk_size_bytes to ..._data_size_bytes

This reduces the potential for confusion, as the stat reflects how many
bytes of "current" data there is in a collection.

The actual size of the underlying couchstore file on disk is expected
to be larger due to fragmentation, and various overheads.

Also renames the cbstat version:

 {scope_id}:{collection_id}:disk_size

 {scope_id}:{collection_id}:data_size

Change-Id: I08a625c7b199aeb5fec93d8cb411ee796682bb67
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/149382
Tested-by: Build Bot <build@couchbase.com>
Tested-by: Daniel Owen <owend@couchbase.com>
Reviewed-by: Daniel Owen <owend@couchbase.com>